// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders OverMacLimit without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-icon--name-warning rcx-icon rcx-css-ayadvf"
      title="Workspace_exceeded_MAC_limit_disclaimer"
    >
      
    </i>
  </div>
</body>
`;

exports[`renders WithPriority without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-icon--name-chevron-double-up rcx-icon rcx-css-aob2og"
      title=""
    >
      
    </i>
  </div>
</body>
`;
